blockml/test/errors/04_model/e213/e213m.model
model: e213m
udfs: abc    
joins:
- from_view: e213_one
  as: a

